--- a/resources/sass/2-layouts/_blogs.scss
+++ b/resources/sass/2-layouts/_blogs.scss
@@ -6,7 +6,6 @@
         height:310px;
         margin:2% 0;
         position:relative;
-        box-shadow: inset 11px 10px 33px 0px rgba(0,0,0,0.75);
         &:hover{
             .description{
                 background:none;
@@ -22,6 +21,7 @@
             padding:0 0 20px 30px;
             @include displayFlex(flex-end, column, flex-start);
             background: rgba(1, 65, 252, 0.6);
+            box-shadow: inset 20px 20px 33px 0px rgba(2, 44, 172, 0.6);
             transition:.3s ease-in-out;
             left:0;
             top:0;
