--- a/resources/sass/2-layouts/_catalog-section-items.scss
+++ b/resources/sass/2-layouts/_catalog-section-items.scss
@@ -5,36 +5,41 @@
     .types-of-media{
         @include displayFlex(space-between, row, space-between);
         flex-wrap:wrap;
-        .item{
-            @include displayFlex(flex-start, column, center);
-            text-align:center;
-            padding:1% 2%;
+        a{
             width:32%;
             height:300px;
             margin-bottom:2%;
-            background:$bg_grey_color;
-            transition:.4s ease-in-out;
-            &:hover{
-                cursor:pointer;
+            .item{
+                @include displayFlex(center, column, center);
+                text-align:center;
+                padding:1% 2%;
+                width:100%;
+                height:100%;
+                background:$bg_grey_color;
                 transition:.4s ease-in-out;
-                @include box-shadow(0px, 2px, 7px, -5px, black);
-                background-color:white;
-                transform:scale(1.05);
-            }
-            .image{
-                height:80%;
-                display:flex;
-                img{
-                    height:auto;
-                    min-width:100px;
-                    margin:auto 0;
+                &:hover{
+                    cursor:pointer;
+                    transition:.4s ease-in-out;
+                    @include box-shadow(0px, 2px, 7px, -5px, black);
+                    background-color:white;
+                    transform:scale(1.05);
                 }
-            }  
-            h6.title{
-                @include fontBold;
-                font-size:24px;
-                color:$item_title_color;
-                margin:1% 0 0;
+                .image{
+                    height:80%;
+                    display:flex;
+                    img{
+                        height:auto;
+                        min-width:100px;
+                        margin:auto 0;
+                    }
+                }  
+                h6.title{
+                    @include fontBold;
+                    font-size:24px;
+                    color:$item_title_color;
+                    margin:1% 0 0;
+                    text-align:center;
+                }
             }
         }
     }
