--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,4 +18,4 @@
 @import "~font-awesome/scss/font-awesome";
 
 // Select2
-@import '../../../public/vendor/select2/dist/css/select2.css';
+//@import '../../../public/vendor/select2/dist/css/select2.css';
